# SnapThrough

./: CMakeLists.txt  OOBmatlab.m  generalSolver.cpp  generalTruss.cpp  main.cpp  main.h  postAL.m  postIncr.m  postNR.m  postProcessing.m  readData.cpp  simpleSolver.cpp  simpleTruss.cpp  tools.cpp  writeData.cpp
