PROJECT(SnapThrough CXX)
cmake_minimum_required(VERSION 2.7)
include(CheckCXXCompilerFlag)

IF(NOT CMAKE_BUILD_TYPE)
    SET( CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
ENDIF()

IF(MSVC)
    add_definitions(-D_USE_MATH_DEFINES -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_DEPRECATE)
ENDIF(MSVC)

FILE(GLOB SRCS1 *.h *.cpp)

ADD_EXECUTABLE(snapThrough ${SRCS1} main.cpp)
